Tests/Negative/BreakOutsideLoop.mr
fun main(): i32 {
    if true {
        break; // Error: 'break' outside of loop
    }
    return 0;
}
